[project]
name = "doom-map-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dearpygui>=2.2",
    "httpx>=0.28.1",
    "omgifol>=0.5.1",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
]
